# ZegoStreamingLinuxDemo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
AppSupport/: AppIDHelper.h  ZGHelper.cpp  ZGHelper.h  ZGLog.cpp  ZGManager.cpp  ZGManager.h  ZGTaskQueue.cpp  ZGTimer.cpp  ZGTimer.h
ExternalVideoCapture/: .SurgnovaCamera.cpp.swp  SurgnovaCamera.cpp  SurgnovaCamera.h  ZGCameraSource.cpp  ZGCameraSource.h  ZGExternalVideoCaptureDemo.cpp  ZGExternalVideoCaptureDemo.h  ZGExternalVideoCaptureManager.cpp  ZGExternalVideoCaptureManager.h  ZGExternalVideoCatpureDemoHelper.cpp  ZGExternalVideoCatpureDemoHelper.h  ZGExternalVideoSource.cpp  ZGExternalVideoSource.h  ZGImageSource.cpp  ZGScreenSource.h  ZegoCamera.cpp  ZegoCamera.h
include/: AVDefines.h  LiveRoom-IM.h  LiveRoom-Publisher.h  LiveRoom.h  LiveRoomCallback-Player.h  LiveRoomCallback-Publisher.h  LiveRoomCallback.h  LiveRoomDefines.h  media_player.h  zego-api-defines.h  zego-api-error.h  zego-api-external-audio-device.h  zego-api-external-video-capture.h  zego-api-external-video-render.h  zego-api-mix-stream.h
